Fix saves overflow and unique graphics key

--- a/src/styles/saves.scss
+++ b/src/styles/saves.scss
@@ -168,6 +168,7 @@
 		.graphics-wrapper {
 			.graphics {
 				font-size: 0.6em;
+				overflow: hidden;
 			}
 		}
 		.save-details-content {
